--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ netplotbrain = "^0.3.0"
 networkx = "^3.2.1"
 scikit-image = "^0.22.0"
 nichord = "^0.2.7"
-
+patsy = "0.5.6"
+statsmodels = "0.14.2"
 
 [build-system]
 requires = ["poetry-core"]
