--- a/config/config.yml
+++ b/config/config.yml
@@ -2,6 +2,18 @@
 in_root: '$HOME/graham' #for cbs server
 #in_root: '$HOME' #for graham
 
+groups:
+  dre: 'dre == 1'
+  nondre: 'dre == 0'
+
+ttests:
+  - group1: dre
+    group2: nondre
+  - group1: tle
+    group2: nontle
+
+
+
 #files in one big zip file - these paths are relative to in_root defined above
 in_agg_zip: 
   snakebatch_dwi:
