--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -45,7 +45,7 @@ rule all:
         get_dwi_targets(),
         get_func_targets(),
         get_sfc_targets(),
-	'resources/merged_tabular.tsv'
+        get_ttest_targets(),
 
 
 rule all_dwi:
