--- a/config/config.yml
+++ b/config/config.yml
@@ -223,6 +223,9 @@ nichord:
     edge_widthscale: 0.001
   func:
     edge_widthscale: 0.001
+  strucFA:
+    edge_widthscale: 0.001
+
 
 netplotbrain:
   struc:
@@ -230,6 +233,12 @@ netplotbrain:
     edge_thresholddirection: above
     edge_threshold: 100
     edge_widthscale: 0.001
+
+  struc:
+    view: 'LSc'
+    edge_thresholddirection: above
+    edge_threshold: 0.3
+    edge_widthscale: 0.5
 
 
   func:
