--- a/config/config.yml
+++ b/config/config.yml
@@ -124,8 +124,15 @@ input_path:
   t1_mask:
     HCP: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/anat/sub-{subject}_desc-brain_mask.nii.gz'
     LOBE: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/anat/sub-{subject}_acq-MPRvNavAvgEcho12_run-1_desc-brain_mask.nii.gz'
-  surf_gii_t1: 'snakebatch/{dataset}/derivatives/snakeanat/sourcedata/ciftify/sub-{subject}/T1w/fsaverage_LR32k/sub-{subject}.{hemi}.{surf}.32k_fs_LR.surf.gii'
-  surf_gii_mni: 'snakebatch/{dataset}/derivatives/snakeanat/sourcedata/ciftify/sub-{subject}/MNINonLinear/fsaverage_LR32k/sub-{subject}.{hemi}.{surf}.32k_fs_LR.surf.gii'
+
+  t1_surf:
+    HCP: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/anat/sub-{subject}_hemi-{hemi}_{surf}.surf.gii'
+    LOBE: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/anat/sub-{subject}_acq-MPRvNavAvgEcho12_run-1_hemi-{hemi}_{surf}.surf.gii'
+
+  msm_sphere:
+    HCP: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/anat/sub-{subject}_hemi-{hemi}_space-fsLR_desc-msmsulc_sphere.surf.gii'
+    LOBE: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/anat/sub-{subject}_acq-MPRvNavAvgEcho12_run-1_hemi-{hemi}_space-fsLR_desc-msmsulc_sphere.surf.gii'
+
   hippunfold_vol_tsv: 'snakebatch/{dataset}/derivatives/hippunfold/hippunfold/sub-{subject}/anat/sub-{subject}_space-cropT1w_desc-subfields_atlas-bigbrain_volumes.tsv'
 
 
