--- a/config/config.yml
+++ b/config/config.yml
@@ -133,6 +133,17 @@ input_path:
     HCP: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/anat/sub-{subject}_hemi-{hemi}_space-fsLR_desc-msmsulc_sphere.surf.gii'
     LOBE: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/anat/sub-{subject}_acq-MPRvNavAvgEcho12_run-1_hemi-{hemi}_space-fsLR_desc-msmsulc_sphere.surf.gii'
 
+
+
+  bold_mni:
+    HCP: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/func/sub-{subject}_task-rest_acq-AP_space-MNI152NLin2009cAsym_desc-preproc_bold.nii.gz'
+    LOBE: 'snakebatch/{dataset}/derivatives/fmriprep_23.1.0/sub-{subject}/func/sub-{subject}_task-rest_acq-AP_run-1_space-MNI152NLin2009cAsym_desc-preproc_bold.nii.gz'
+
+  bold_mni_ref:
+    HCP: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/func/sub-{subject}_task-rest_acq-AP_space-MNI152NLin2009cAsym_boldref.nii.gz'
+    LOBE: 'snakebatch/{dataset}/derivatives/fmriprep_23.1.0/sub-{subject}/func/sub-{subject}_task-rest_acq-AP_run-1_space-MNI152NLin2009cAsym_boldref.nii.gz'
+
+
   hippunfold_vol_tsv: 'snakebatch/{dataset}/derivatives/hippunfold/hippunfold/sub-{subject}/anat/sub-{subject}_space-cropT1w_desc-subfields_atlas-bigbrain_volumes.tsv'
 
 
@@ -157,7 +168,7 @@ test_subjects:
    - 'HCD0026119'
 
   LOBE:
-   - '007'
+   - '029'
    - '009'
    - '010'
 
@@ -165,7 +176,6 @@ template_surf: 'resources/tpl-fsLR/tpl-fsLR_den-32k_hemi-{hemi}_{surf}.surf.gii'
 
 #atlases to actually use:
 atlases:
-  - schaefer
   - brainnetome
 
 
@@ -178,6 +188,9 @@ atlas:
   brainnetome: 
     dlabel: resources/brainnetome/fsaverage.BN_Atlas.32k_fs_LR_updated.dlabel.nii
     network_pattern: '[^_]+_([^_]+)' #regex to find network name within label
+    subcort_dseg: resources/brainnetome/BN_Atlas_246_1mm_subcort_withlabels.nii.gz #in MNI 6th asym, but just will resample it to 2009c 
+    subcort_labellist: resources/brainnetome/subcort_labellist.txt
+
 dwi:
   shells: 
     - '0'
