--- a/config/config.yml
+++ b/config/config.yml
@@ -136,13 +136,16 @@ input_path:
 
 
   bold_mni:
-    HCP: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/func/sub-{subject}_task-rest_acq-AP_space-MNI152NLin2009cAsym_desc-preproc_bold.nii.gz'
-    LOBE: 'snakebatch/{dataset}/derivatives/fmriprep_23.1.0/sub-{subject}/func/sub-{subject}_task-rest_acq-AP_run-1_space-MNI152NLin2009cAsym_desc-preproc_bold.nii.gz'
+    HCP: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/func/sub-{subject}_task-rest_acq-AP_space-MNI152NLin6Asym_desc-preproc_bold.nii.gz'
+    LOBE: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/func/sub-{subject}_task-rest_acq-AP_run-1_space-MNI152NLin6Asym_desc-preproc_bold.nii.gz'
 
   bold_mni_ref:
-    HCP: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/func/sub-{subject}_task-rest_acq-AP_space-MNI152NLin2009cAsym_boldref.nii.gz'
-    LOBE: 'snakebatch/{dataset}/derivatives/fmriprep_23.1.0/sub-{subject}/func/sub-{subject}_task-rest_acq-AP_run-1_space-MNI152NLin2009cAsym_boldref.nii.gz'
+    HCP: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/func/sub-{subject}_task-rest_acq-AP_space-MNI152NLin6Asym_boldref.nii.gz'
+    LOBE: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/func/sub-{subject}_task-rest_acq-AP_run-1_space-MNI152NLin6Asym_boldref.nii.gz'
 
+  warp_mni_t1w:
+    HCP: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/anat/sub-{subject}_from-MNI152NLin6Asym_to-T1w_mode-image_xfm.h5'
+    LOBE: 'snakebatch/{dataset}/derivatives/fmriprep/sub-{subject}/anat/sub-{subject}_acq-MPRvNavAvgEcho12_run-1_from-MNI152NLin6Asym_to-T1w_mode-image_xfm.h5'
 
   hippunfold_vol_tsv: 'snakebatch/{dataset}/derivatives/hippunfold/hippunfold/sub-{subject}/anat/sub-{subject}_space-cropT1w_desc-subfields_atlas-bigbrain_volumes.tsv'
 
@@ -159,18 +162,18 @@ datasets:
   - HCP
   - LOBE
 
-use_test_subjects: False
+use_test_subjects: True
 
 test_subjects: 
-  HCP:
+  HCP: 
    - 'HCD0277447'
    - 'HCD0021614'
-   - 'HCD0026119'
+     #   - 'HCD0026119'
 
   LOBE:
    - '029'
    - '009'
-   - '010'
+     #   - '010'
 
 template_surf: 'resources/tpl-fsLR/tpl-fsLR_den-32k_hemi-{hemi}_{surf}.surf.gii'
 
@@ -186,10 +189,14 @@ atlas:
   mmp: 
     dlabel: resources/mmp/Q1-Q6_RelatedParcellation210.CorticalAreas_dil_Final_Final_Areas_Group_Colors.32k_fs_LR.dlabel.nii
   brainnetome: 
-    dlabel: resources/brainnetome/fsaverage.BN_Atlas.32k_fs_LR_updated.dlabel.nii
-    network_pattern: '[^_]+_([^_]+)' #regex to find network name within label
-    subcort_dseg: resources/brainnetome/BN_Atlas_246_1mm_subcort_withlabels.nii.gz #in MNI 6th asym, but just will resample it to 2009c 
-    subcort_labellist: resources/brainnetome/subcort_labellist.txt
+  #dlabel: resources/brainnetome/fsaverage.BN_Atlas.32k_fs_LR_updated.dlabel.nii
+    dlabel: resources/brainnetome/fsaverage.BN_Atlas.32k_fs_LR_updated_withnetworks.dlabel.nii 
+    network_pattern: '[^_]+_[^_]+_([^_]+)' #regex to find network name within label
+    label_volume: resources/brainnetome/BN_Atlas_246_1mm_subcort_withlabels.nii.gz
+
+
+cifti:
+  structure_label_volume: resources/tpl-MNI152NLin6Asym/tpl-MNI152NLin6Asym_res-02_atlas-HCP_dseg_withlabels.nii.gz
 
 dwi:
   shells: 
